# telegram-session-keeper

./: .gitignore  Cargo.toml  LICENSE  Program.cs  README.md  TelegramSessionKeeper.csproj  TelegramSessionKeeper.sln
.github/workflows/: publish-nuget.yaml
src/: main.rs
